--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -396,17 +396,18 @@ a{
 @keyframes zoomeffect{
     0%{
         transform: scale(1,1);
-        overflow:hidden;
+        opacity: 100%;
     }
 
     50%{
         transform: scale(1.2,1.2);
-        overflow:hidden;
+        opacity: 50%;
     }
 
     100%{
         transform: scale(1,1);
-        overflow:hidden;    }
+        opacity: 0%;
+    }
 }
 
 .menu{
