--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -414,33 +414,14 @@ a{
 
 @keyframes wiggle {
     from{
-        -webkit-transform: translateX(15px);
-        transform: translateX(5px);
+    
     }
 
-    30%{
-        -webkit-transform: translateX(-15px);
-        transform: translateX(-15px);
-    }
 
-    50%{
-        -webkit-transform: translateX(30px);
-        transform: translateX(30px);
-    }
-
-    65%{
-        -webkit-transform: translateX(-30px);
-        transform: translateX(-30px);
-    }
-
-    80%{
-        -webkit-transform: translateX(20px);
-        transform: translateX(20px);
     }
 
     to{
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
+       
     }
 }
 
@@ -452,3 +433,32 @@ a{
     animation: wiggle 50ms;
     animation-direction: reverse;
 }
+
+/*Soulignement*/
+
+@keyframes underline{
+    from{
+        border-bottom: solid black 1px;
+        border-width: 0px;
+    }
+
+    50%{
+        border-bottom: solid black 1px;
+        border-width: 50%;
+    }
+
+    to{
+        border-bottom: solid black 1px;
+        border-width: 100%;
+    }
+
+}
+
+h2{
+    text-decoration: none;
+}
+
+h2:hover{
+    animation: underline 13s ease-in-out;
+}
+/*Points de suspension*/
