--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -456,3 +456,11 @@ h2:hover{
     border-bottom: solid black 2px;
 }
 /*Points de suspension*/
+
+@keyframes loading{
+    
+}
+
+#next:hover{
+    color: transparent;  
+}
