--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,12 @@ body{
     margin: 0;
 }
 
+#legal{
+    margin: 5% 15% 10%;
+    padding: 45px 67px 40px
+    background-color:#579C87;
+}
+
 /*haut de la page*/
 
 #logo{
@@ -71,8 +77,8 @@ h1{
     background-color: #579C87;
     color: #FDCB46;
     margin-bottom: 188px;
-    margin-right: 37%;
-    margin-left: 37%;
+    margin-right: 13em;
+    margin-left: 13em;
     font-size: 55px;
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
@@ -89,8 +95,8 @@ h1{
     font-size: 32px;
     align-items: center;
     font-family: 'Poppins', sans-serif;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 1em;
+    padding-bottom: 1em;
 
 }
 
@@ -100,11 +106,11 @@ a{
 }
 
 #mentions{
-    margin-left: 40px;
+    margin-left: 1em;
 }
 
 #contact{
-    margin-right: 40px;
+    margin-right: 1em;
 }
 
 /*menu la note enchantée*/
@@ -121,15 +127,15 @@ a{
 .dish{
     display: flex;
     justify-content: space-between;
-    margin-right: 12%;
-    margin-left: 12%;
+    margin-right: 7em;
+    margin-left: 7em;
 }
 
 #menu_lne{
     background-color: #ffebee;
     text-align: center;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 29em;
+    margin-left: 29em;
     font-family: "segoeprint";
     box-shadow: 1px 1px 19px #b7b6b6;
     color: #3D1319;
@@ -147,8 +153,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right: 6em;
+    padding-left: 6em;
 }
 
 .hr_lne{
@@ -187,8 +193,8 @@ a{
 #menu_lcf{
     font-family: "notoserif";
     text-align: center;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 29em;
+    margin-left: 29em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #FFF5FE;
     padding-bottom: 125px;
@@ -241,8 +247,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right: 6em;
+    padding-left: 6em;
     font-family: "serif12";
 }
 
@@ -252,8 +258,8 @@ a{
 #menu_ldp{
     font-family: "segoeprint";
     text-align: center;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 29em;
+    margin-left: 29em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #EDEFEF;
     padding-bottom: 125px;
@@ -295,8 +301,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right: 6em;
+    padding-left: 6em;
 }
 
 /*Menu La palette du goût*/
@@ -304,8 +310,8 @@ a{
 #menu_lpg{
     font-family: "segoeprint";
     text-align: center;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 29em;
+    margin-left: 29em;
     box-shadow: 1px 1px 19px #b7b6b6;
     background-color: #EDEFEF;
     padding-bottom: 125px;
@@ -378,8 +384,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right: 6em;
+    padding-left: 6em;
 }
 
 
